# article-research-thoughts

./: .gitignore  .vercelignore  config.yaml  schema.sql  vercel.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-chat-ui-memory/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-clustering-topic-evolution/: .continue-here.md  03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-RESEARCH.md  (+2 more)
api/: index.py  requirements.txt
backend/: pyproject.toml
backend/api/: index.py
backend/second_brain/: __init__.py  __main__.py  cli.py  config.py  db.py
backend/second_brain/analysis/: __init__.py  dossier.py  extraction.py  suggestions.py
backend/second_brain/chat/: conversation.py  memory.py  router.py
backend/second_brain/ingestion/: __init__.py  chunker.py  clustering.py  insights.py  readwise.py
backend/second_brain/providers/: __init__.py  embeddings.py  llm.py
backend/second_brain/retrieval/: __init__.py  search.py
backend/tests/: test_cli.py
backend/tests/analysis/: __init__.py  test_dossier.py  test_extraction.py  test_suggestions.py
backend/tests/chat/: test_conversation.py  test_memory.py  test_router.py
backend/tests/clustering/: test_clustering.py
backend/tests/ingestion/: test_readwise.py
backend/tests/insights/: test_insights.py
docs/: ARCHITECTURE.md  CLOSEOUT.md  DECISIONS.md  NOW.md  PLAYBOOK.md  POST_V1_SUMMARY.md  PROGRESS.md  PROJECT.md  ROADMAP.md  SYSTEM_WALKTHROUGH.md  TASK_LOOP.md  TODO.md  WALKTHROUGH_INDEX.md  layer6a.md
docs/SPECS/: phase-4-synthesis.md  phase-5-insights.md  post-v1-analyst-workbench.md  post-v1-analyst-workbench.sql  post-v1-implementation-phases.md
frontend/: next.config.ts  package-lock.json  package.json
migrations/: 2026-04-02-phase1-analyst-foundation.sql  2026-04-02-phase2-claims-and-evidence.sql  2026-04-02-phase3-dossier-and-timeline.sql
(+24 files in other folders)
